--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,16 @@
 ---
 version: '3.6'
 services:
-  cb-onfido-webhook:
-    image: cb_idcheck
+  wl-daemon-1:
+    image: wl_daemon
     networks:
       - default
     ports:
-      - "59327:59327"
+      - "32948:32948"
     volumes:
       - ~/kycfile/whitelist:/storage/kycfile/whitelist
       - ~/kycfile/consider:/storage/kycfile/consider
       - ~/tokens:/run/secrets
     command: >-
-      python3 webhook.py --host 0.0.0.0 --port 59327 --host 0.0.0.0 --log idchecklog.txt --id_api onfido --whitelisted_dir=/storage/kycfile/whitelist --consider_dir=/storage/kycfile/consider
+       ./run_wl_daemon --rpconnect 0.0.0.0 --rpcport 32948 --rpcuser ${OCEAN_RPC_USER:-ocean} --rpcpassword ${OCEAN_RPC_PASS:-oceanpass} --kyc_indir shared/whitelist --kyc_outdir shared/onboarded
+      
